redid approach so that we can handle weird characters

--- a/tests/workflows/test_workflow_payload.yaml
+++ b/tests/workflows/test_workflow_payload.yaml
@@ -10,7 +10,7 @@ parameters:
     default: 1.5
 
 flowdef:
-  - name: Get plate wo${test}rd
+  - name: Get plate wo${test}rd $test.nottest
     module: transfer
     action: transfer
     args:
